--- a/style.css
+++ b/style.css
@@ -1,2 +1,5 @@
 @import url("./styles/normalize.css");
 @import url("./styles/utilites.css");
+@import url("./styles/swiper-bundle.js");
+@import url("./styles/swiper-bundle.css");
+@import url("./styles/pagination.css");
