Add images with text and create footer section of main page

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("./styles/normalize.css");
 @import url("./styles/utilites.css");
-@import url("./styles/swiper-bundle.js");
+@import url("./js/swiper-bundle.js");
 @import url("./styles/swiper-bundle.css");
 @import url("./styles/pagination.css");
