--- a/styles/header.css
+++ b/styles/header.css
@@ -16,10 +16,7 @@
   align-items: center;
   justify-content: space-between;
 }
-.header__top {
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
+
 .header__bottom {
   background-color: #fff;
   padding-top: 6px;
@@ -39,6 +36,8 @@
   display: flex;
   align-items: center;
   justify-content: start;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 .header__nav ul {
   list-style-type: none;
@@ -113,7 +112,44 @@
   right: 20px;
 }
 
+.header__bottom__contacts {
+  min-width: 368px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .header__bottom__contacts p{
   font-family: var(--font-family-regular);
   font-size: 14px;
+}
+
+.header__bottom__contacts div {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.header__accountpage {
+  width: fit-content;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  text-decoration: none;
+  background-color: #E8ECF0;
+  color: #213F74;
+  font-family: var(--font-family-medium);
+  font-size: 15px;
+  transition: all 0.2s ease-in;
+  appearance: none;
+  border: none;
+  padding: 8px 10px;
+}
+
+.header__accountpage:hover {
+  background-color: #E0E7EE;
 }
