--- a/styles/utilites.css
+++ b/styles/utilites.css
@@ -1,7 +1,9 @@
 .container{
     max-width: 1296px;
+    min-width: 1296px;
     margin: 0px auto;
     display: flex;
+    height: auto;
 }
 ul, ol, p {
     margin: 0;
