--- a/styles/main.css
+++ b/styles/main.css
@@ -190,7 +190,7 @@
 
 .categories {
     width: 100%;
-    height: 948px;
+    height: auto;
     position: relative;
     display: flex;
     justify-content: center;
@@ -384,4 +384,168 @@
     position: relative;
     display: flex;
     z-index: 2;
+}
+
+.actions {
+    width: 100%;
+    height: auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.actions .container {
+    position: relative;
+    width: 100%;
+    margin: 0px 72px;
+    background-color: #f3f5f7;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.actions__top,
+.actions__bottom {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.actions__top {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.actions__top__heading {
+    font-family: var(--font-family-medium);
+    font-size: 46px;
+    color: #122952;
+    margin-left: 80px;
+}
+
+.actions__top__link {
+    text-decoration: none;
+    margin-right: 80px;
+}
+
+.actions__bottom {
+    height: auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 416px 416px 416px;
+    gap: 24px;
+    grid-template-areas: 
+    "box1 box2 box3";
+    align-items: start;
+    box-sizing: border-box;
+}
+
+.actions__list__item__period {
+    font-family: var(--font-family-regular);
+    font-size: 14px;
+    color:#7F8295;
+}
+
+.actions__list__item__heading {
+    font-family: var(--font-family-medium);
+    font-size: 18px;
+    color: #122952;
+}
+
+.actions__list__item__text {
+    font-family: var(--font-family-regular);
+    font-size: 14px;
+    color: #4D526C;
+}
+
+.actions__list__item__link {
+    font-family: var(--font-family-semibold);
+    font-size: 16px;
+    color: #213F74;
+}
+
+.about {
+    width: 100%;
+    height: auto;
+    margin: 80px, 152px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.about .container {
+    position: relative;
+    width: 1296px;
+    height: 500px;
+    margin-top: 80px;
+    display: flex;
+    flex-direction:row;
+    justify-content: center;
+}
+
+.about__left {
+    position: relative;
+    width: 726px;
+    height: auto;
+    display: flex;
+    justify-content:start;
+}
+
+.about__img__office {
+    position: absolute;
+    margin-left: 110px;
+    width: 616px;
+    height: 491px;
+    object-fit: cover;
+    z-index: 1;
+}
+
+.about__img__engie {
+    position: absolute;
+    margin-top: 90px;
+    width: auto;
+    height: 330px;
+    z-index: 2;
+}
+
+.about__right {
+    height: auto;
+    width: 526px;
+    padding-left: 44px;
+}
+
+.about__right__top__heading {
+    font-family: var(--font-family-medium);
+    font-size: 46px;
+    color: #122952;
+}
+
+.about__right__top__text {
+    margin-top: 20px;
+    font-family: var(--font-family-regular);
+    font-size: 14px;
+    color: #4D526C;
+}
+
+.about__right__bottom__guarantee {
+    margin-top: 20px;
+    font-family: var(--font-family-medium);
+    font-size: 20px;
+    color: #122952;
+}
+
+.about__right__bottom__text {
+    margin-top: 20px;
+    font-family: var(--font-family-regular);
+    font-size: 14px;
+    color: #4D526C;
+}
+
+.about__right__bottom__link {
+    margin-top: 40px;
+    text-decoration: none;
 }
