--- a/styles/header.css
+++ b/styles/header.css
@@ -80,8 +80,8 @@
   justify-content: start;
 }
 .header__search input {
-  width: 100%;
-  height: 100%;
+  width: 686px;
+  height: 50px;
   background-color: #f3f5f7;
   border: 1px solid #e5e9ec;
   border-radius: 46px;
