--- a/styles/header.css
+++ b/styles/header.css
@@ -22,8 +22,6 @@
   justify-content: space-between;
 }
 .header__top {
-  padding-top: 8px;
-  padding-bottom: 8px;
 }
 .header__bottom {
   background-color: #fff;
@@ -135,6 +133,7 @@
 .header__accountpage {
   width: fit-content;
   height: 100%;
+  height: 36px;
   display: flex;
   align-items: center;
   justify-content: center;
