--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,11 @@
 
 .categoriesNav__list__item--active {
     background-color: #c6bcb2;
-
+    width: 154px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .categoriesNav__cart {
@@ -197,13 +201,16 @@
 }
 
 .categories .container {
-    margin: 80px 152px;
-    height: 624px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    min-height: 624px;
+    height: auto;
     width: 100%;
+    justify-content: center;
 
     display: grid;
-    grid-template-columns: 300px 300px 300px 300px;
-    grid-template-rows: 300px 300px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-auto-flow: column;
     gap: 24px;
     grid-template-areas: 
@@ -218,13 +225,7 @@
     justify-content: center;
 }
 
-.categories__item--square {
-    position: relative;        
-    overflow: hidden;
-    border-radius: 10px;
-    
-}
-.categories__item--square::before {
+.categories__item::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -239,11 +240,11 @@
     z-index: 1;
 }
 
-.categories__item__content--square {
-    width: 300px;    
-    height: 300px;    
-    position: relative;
-    z-index: 2;
+.categories__item--square {
+    position: relative;        
+    overflow: hidden;   
+    width: 300px; 
+    height: 300px;
 }
 
 .categories__item__img {
@@ -254,43 +255,33 @@
     flex-shrink: 0;
 }
 
-.categories__item__img--BIG {
-    position: absolute;
-    width: auto;
+.categories__item__content {
+    width: 100%;
     height: 100%;    
-    object-fit: cover;
-    flex-shrink: 0;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: space-between;
 }
+
 
 .categories__item__h {
-    position: absolute;
     width: 250px;
-    height: 32px;    
-    margin-top: 244px;
-    margin-left: 30px;
+    height: 32px;
     font-family: var(--font-family-medium);
     font-size: 24px;
     color: #fff;
-}
-
-.categories__item__h--BIG {
-    position: absolute;
-    width: 250px;
-    height: 32px;    
-    margin-top: 568px;
-    margin-left: 30px;
-    font-family: var(--font-family-medium);
-    font-size: 24px;
-    color: #fff;
+    margin-left: 40px;
 }
 
 .categories__item__link {
-    position: absolute;
     display: flex;
     width: 10px;
     height: 30px;
-    margin-left: 85%;
-    margin-top: 255px;
+    padding-bottom: 45px;
+    margin-right: 47px;
 }
 
 .categories__item__link::before {
@@ -305,99 +296,32 @@
     background-color: rgba(255, 255, 255, 0.2);
 }
 
-.categories__item__link--BIG {
-    position: absolute;
-    display: flex;
-    width: 10px;
-    height: 30px;
-    margin-left: 265px;
-    margin-top: 580px;
-}
-
-.categories__item__link--BIG::before {
-    content: "";
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    transform: translate(-49%, -43%);
-    z-index: 2;
-    border-radius: 50%;
-    display: flex;
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
 .categories__item--rectangle {
     position: relative;    
     overflow: hidden;
-    border-radius: 10px;
+    width: 624px;
+    height: 300px;
 }
-
-.categories__item--rectangle::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: 
-    linear-gradient(
-        to bottom, 
-        transparent 0%,
-        rgba(44, 53, 70, 0.1) 10%,
-        rgba(31, 44, 73, 0.8) 100%
-        );
-    z-index: 1;
-}
-
 
 .categories__item--BIG {
     position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-    
-}
-
-.categories__item--BIG::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: 
-    linear-gradient(
-        to bottom, 
-        transparent 0%,
-        rgba(44, 53, 70, 0.1) 10%,
-        rgba(31, 44, 73, 0.8) 100%
-        );
-    z-index: 1;
-}
-
-.categories__item__content--rectangle {
-    width: 624px;
-    height: 300px;
-    position: relative;
-    display: flex;
-    z-index: 2;
-}
-
-.categories__item__content--BIG {
-    width: 300px;
+    overflow: hidden;    
+    width: 350px;
     height: 624px;
-    position: relative;
-    display: flex;
-    z-index: 2;
 }
 
 .actions {
     width: 100%;
     height: auto;
     position: relative;
-    display: flex;
-    justify-content: center;
 }
 
 .actions .container {
     position: relative;
-    width: 100%;
-    margin: 0px 72px;
+    width: auto;
+    min-width: 1456px;
+    padding: 0 80px;
+    height: auto;
     background-color: #fff;
     border-radius: 10px;
     display: flex;
@@ -415,54 +339,54 @@
     justify-content: space-between;
 }
 
-.actions__top {
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
-
 .actions__top__heading {
     font-family: var(--font-family-medium);
     font-size: 46px;
     color: #122952;
-    margin-left: 80px;
 }
 
 .actions__top__link {
     text-decoration: none;
-    margin-right: 80px;
 }
 
 .actions__bottom {
     height: auto;
-    width: 100%;
     display: grid;
-    grid-template-columns: 416px 416px 416px;
+    align-items: center;
+    justify-content: center;    
+    align-items: start;
+    box-sizing: border-box;
+    padding-bottom: 70px;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 24px;
     grid-template-areas: 
     "box1 box2 box3";
-    align-items: start;
-    box-sizing: border-box;
 }
 
-.actions__list__item__period {
+.actions__bottom__item {
+    width: 416px;
+    height: auto;
+}
+
+.actions__bottom__item__period {
     font-family: var(--font-family-regular);
     font-size: 14px;
     color:#7F8295;
 }
 
-.actions__list__item__heading {
+.actions__bottom__item__heading {
     font-family: var(--font-family-medium);
     font-size: 18px;
     color: #122952;
 }
 
-.actions__list__item__text {
+.actions__bottom__item__text {
     font-family: var(--font-family-regular);
     font-size: 14px;
     color: #4D526C;
 }
 
-.actions__list__item__link {
+.actions__bottom__item__link {
     font-family: var(--font-family-semibold);
     font-size: 16px;
     color: #213F74;
