--- a/style.css
+++ b/style.css
@@ -9,3 +9,4 @@
 @import url("./styles/header.css");
 @import url("./styles/footer.css");
 @import url("./styles/main.css");
+@import url("./styles/scrollbar.css");
