--- a/styles/main.css
+++ b/styles/main.css
@@ -127,6 +127,13 @@
     height: 100%;
 }
 
+@media (max-width: 768px) {
+    .Screen__slide{
+        width: 768px;
+        height: auto;
+    }
+}    
+
 .Screen__slide__bg {
     position: absolute;
     width: 100%;
@@ -149,6 +156,17 @@
         rgba(31, 44, 73, 0.8) 100%
         );
     z-index: 1;
+}
+
+@media (max-width: 768px) {
+    .Screen__slide__bg{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    }
+    .Screen__slide::before {
+    width: 768px;
+    }
 }
 
 .Screen__slide .container {
@@ -191,6 +209,25 @@
     color: #fff;
 }
 
+@media (max-width: 768px) {
+    .Screen__slide .container {
+        width: 700px;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .Screen__slide__h {
+       position: absolute;
+       width: auto;
+       height: 118px;
+       margin-top: 343px;
+       font-family: var(--font-family-medium);
+       font-size: 56px;
+       text-decoration: none;
+       color: #fff;
+   }
+}
 
 .categories {
     width: 100%;
@@ -217,6 +254,7 @@
     "box1 box2 box2 box5"
     "box3 box3 box4 box5";
 }
+
 
 .categories__item {
     border-radius: 10px;    
@@ -266,14 +304,13 @@
     justify-content: space-between;
 }
 
-
 .categories__item__h {
     width: 250px;
     height: 32px;
     font-family: var(--font-family-medium);
     font-size: 24px;
     color: #fff;
-    margin-left: 40px;
+    margin-left: 20px;
 }
 
 .categories__item__link {
@@ -281,7 +318,7 @@
     width: 10px;
     height: 30px;
     padding-bottom: 45px;
-    margin-right: 47px;
+    margin-right: 30px;
 }
 
 .categories__item__link::before {
@@ -310,12 +347,65 @@
     height: 624px;
 }
 
-.actions {
+@media (max-width: 768px) {
+    .categories {
+    width: 728px;
+    height: auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+.categories .container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    min-height: 880px;
+    height: auto;
+    width: 100%;
+    justify-content: center;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr;
+    grid-auto-flow: column;
+    gap: 24px;
+    grid-template-areas: 
+    "box1 box2 box2"
+    "box3 box3 box4"
+    "box5 box5 box5";
+}
+
+.categories__item--square {
+    position: relative;        
+    overflow: hidden;   
+    width: 229px; 
+    height: 280px;
+}
+
+.categories__item--rectangle {
+    position: relative;    
+    overflow: hidden;
+    width: 479px;
+    height: 280px;
+}
+
+.categories__item--BIG {
+    position: relative;
+    overflow: hidden;    
+    width: 728px;
+    height: 280px;
+}
+}
+
+@media (min-width: 769px) {
+.actions display--tablet {
+        display: none;
+    }
+
+.actions display--desktop {
     width: 100%;
     height: auto;
     position: relative;
 }
-
 .actions .container {
     position: relative;
     width: auto;
@@ -329,6 +419,30 @@
     justify-content: center;
     align-items: center;
 }
+}
+
+@media (max-width: 768px) {
+.actions display--desktop {
+        display: none;
+    }
+
+.actions display--tablet {
+    max-width: 768px;
+    height: auto;
+    position: relative;
+}
+.actions .container {
+    position: relative;
+    width: auto;
+    min-width: 768px;
+    height: auto;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+}
 
 .actions__top,
 .actions__bottom {
@@ -339,6 +453,17 @@
     justify-content: space-between;
 }
 
+@media (max-width: 768px) {
+.actions__top,
+.actions__bottom {
+    max-width: 728px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+}
+
 .actions__top__heading {
     font-family: var(--font-family-medium);
     font-size: 46px;
@@ -347,6 +472,15 @@
 
 .actions__top__link {
     text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .actions__top__heading {
+        padding-left: 20px;
+    }
+    .actions__top__link {
+        padding-right: 20px;
+    }
 }
 
 .actions__bottom {
@@ -363,9 +497,34 @@
     "box1 box2 box3";
 }
 
+@media (max-width: 768px) {
+.actions__bottom {
+    max-width: 768px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    align-items: start;
+    box-sizing: border-box;
+    padding-bottom: 70px;
+    }    
+}
+
 .actions__bottom__item {
     width: 416px;
     height: auto;
+}
+
+@media (max-width: 768px) {
+    .actions__bottom__item {
+        max-width: 768px;
+        height: auto;
+        padding: 15px;
+    }
+    .actions__bottom__item__img {
+        width: 740px;
+        height: auto;
+    }
 }
 
 .actions__bottom__item__period {
@@ -411,12 +570,36 @@
     justify-content: center;
 }
 
-.about__left {
-    position: relative;
-    width: 726px;
-    height: auto;
-    display: flex;
-    justify-content:start;
+@media (min-width: 769px) {
+    .about__left__img {
+        position: relative;
+        width: 726px;
+        height: auto;
+        display: flex;
+        justify-content:start;
+    }
+    .about__right__img {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .about .container {
+        height: 680px;
+        margin-top: 0;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .about__left__img {
+        display: none;
+    }
+    .about__right__img {
+        position: relative;
+        width: 726px;
+        height: 350px;
+        display: flex;
+        justify-content:space-between;
+    }
 }
 
 .about__img__office {
@@ -436,10 +619,31 @@
     z-index: 2;
 }
 
+@media (max-width: 768px) {
+    .about__img__office {
+        width: 510px;
+        height: 350px;
+        margin-left: 0px;
+        border-radius: 10px;
+    }
+    .about__img__engie {
+        width: 280px;
+        height: 360px;
+        margin-left: 463px;
+    }
+}
+
 .about__right {
     height: auto;
     width: 526px;
     padding-left: 44px;
+}
+
+@media (max-width: 768px) {
+    .about__right {
+        width: 100%;
+        padding-left: 0;
+    }
 }
 
 .about__right__top__heading {
@@ -472,6 +676,19 @@
 .about__right__bottom__link {
     margin-top: 40px;
     text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .about__right__bottom__guarantee {
+        width: 426px;
+    }
+    .about__right__bottom__text {
+        width: 520px;
+    }
+    .about__right__bottom__link {
+        margin-top: -45px;
+        margin-left: 580px;
+    }
 }
 
 .contact {
@@ -510,6 +727,12 @@
     overflow: hidden;
 }
 
+@media (max-width: 768px) {
+    .contact {
+        height: 449px;
+    }
+}
+
 .contact__badge__logo {
     width: 65px;
     height: 60px;
@@ -522,6 +745,16 @@
     position: relative;
     z-index: 3;
     margin-left: 332px;
+}
+
+@media (max-width: 768px) {
+    .contact__badge__logo {
+        margin-left: 20px;
+    }
+    
+    .contact__info {
+        margin-left: 20px;
+    }
 }
 
 .contact__info__heading {
